[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-startup-simulator"
version = "0.1.0"
description = "AI Startup Founder Simulator - Meta PyTorch Hackathon"
authors = [
    { name = "Rajiv Ranjan Jha" }
]
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.12.0",
    "fastapi",
    "uvicorn",
    "numpy",
    "pandas",
    "matplotlib",
    "gymnasium",
    "stable-baselines3",
    "shimmy",
    "pillow",
    "python-dotenv",
    "pyyaml",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:main"

[tool.setuptools]
packages = ["."]
